making visual updates for left and right margins to main component, fixing buttons that overlap their containers, tidying up post-deployment

--- a/src/app/sections/work/work.component.scss
+++ b/src/app/sections/work/work.component.scss
@@ -68,7 +68,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 90%; 
+      height: 100%; 
 
       h3 {
         font-size: 1.25rem;
